# OmniQuery-text2data

./: .gitignore  README.md  db_metadata_dump.json
SQLGeneration/: DBSchemaExtractor.py  DataJoiner.py  FinalResult.json  QueryExecutor.py  QueryOutput.json  README.md  SQLGenerator.py  debug_mongo.py  debug_postgres.py  llm_output.json  main.py  multipleDB_QueryGenerator.py  pyproject.toml  requirements.txt
SQLGeneration/DBSchemas/: Mongo_Customer_DB_Schema.json  Postgres_Sales_DB_Schema.json  SQL_Inventory_DB_Schema.json
backend/: .env  .env.example  agent.py  check_sql_schema.py  database_schema.py  db_relationship_dump.py  env  link_mongo_sql.py  main.py  mcp_server.py  query_generator.py  requirements.txt  schema_analyzer.py  schema_fetcher.py  seed_customer_db.py  seed_facility_db.py  seed_healthcare_db.py  seed_hospital_db.py  seed_location_db.py  seed_pharmacy_db.py  seed_sql_db.py  test_agent.py  test_agent_direct.py  test_agent_flow.py  test_llm.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  chat.service.ts
